trying to fix roboto on ios

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,7 +1,6 @@
 @font-face {
     font-family: "Roboto";
-    src: local("Roboto-Regular.ttf") 
-        url("../fonts/Roboto-Regular.ttf");
+    src: url("../fonts/Roboto-Regular.ttf");
 }
 
 html[dark-theme] {
